--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,9 @@ baseurl: '/'
 # google_analytics: 'UA-XXXXXX-X'
 # disqus_shortname: 'your-disqus-name'
 
+show_blog: False
+show_rss: False
+
 author:
   name: 'Grzegorz Piwowarek'
   email: gpiwowarek@gmail.com
