--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,9 @@ author:
   name: 'Grzegorz Piwowarek'
   email: gpiwowarek@gmail.com
   twitter_username: pivovarit
-  github_username:  pivovarit
+  github_username: pivovarit
   linkedin_username:  gpiwowarek
+  stack-overflow-id: 2229438
 
 defaults:
   -
