--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@ baseurl: '/'
 # google_analytics: 'UA-XXXXXX-X'
 # disqus_shortname: 'your-disqus-name'
 
-show_blog: False
-show_rss: False
+show_blog: true
+show_rss: false
 
 author:
   name: 'Grzegorz Piwowarek'
