--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: 4Comprehension
-description: 'Grzegorz Piwowarek'
+title: Grzegorz Piwowarek
+description: 'Software Engineer'
 url: 'http://4comprehension.com'
 baseurl: '/'
 # google_analytics: 'UA-XXXXXX-X'
