--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Grzegorz Piwowarek
 description: 'Software Engineer'
 url: 'http://4comprehension.com'
 baseurl: '/'
-# google_analytics: 'UA-XXXXXX-X'
+google_analytics: 'UA-109711864-1'
 # disqus_shortname: 'your-disqus-name'
 
 show_blog: true
