--- a/.github/workflows/build-purely-functional-data-structures.yml
+++ b/.github/workflows/build-purely-functional-data-structures.yml
@@ -1,27 +1,26 @@
-name: build
+name: build-purely-functional-data-structures
 on:
   push:
-    paths-ignore:
-      - 'talks/index.html'
+    paths:
+      - 'talks/purely-functional-data-structures/*'
 
 jobs:
   build:
     runs-on: ubuntu-latest
- 
+
     name: Generate PDF
     steps:
       - uses: actions/checkout@v2.3.4
-    
+
       - name: Create "/slides" directory
         run: mkdir slides && sudo chmod 777 slides
-               
+
       - name: Build PDF
-        run: docker run --rm -t -v `pwd`:/slides -v ~:/home/user astefanutti/decktape talks/hazelcast/index.html slides/hazelcast-gpiwowarek.pdf
-      
+        run: docker run --rm -t -v `pwd`:/slides -v ~:/home/user astefanutti/decktape talks/purely-functional-data-structures/index.html slides/gpiwowarek-purely-functional-data-structures.pdf
+
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./slides
           publish_branch: slides
-
