--- a/.github/workflows/build-purely-functional-data-structures.yml
+++ b/.github/workflows/build-purely-functional-data-structures.yml
@@ -24,3 +24,4 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./slides
           publish_branch: slides
+          keep_files: true
