--- a/.github/workflows/build-java-n.yml
+++ b/.github/workflows/build-java-n.yml
@@ -7,7 +7,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    strategy:
+      matrix:
+        talk: [ 'java-n' ]
 
     name: Generate PDF
     steps:
@@ -17,7 +19,7 @@ jobs:
         run: mkdir slides && sudo chmod 777 slides
 
       - name: Build PDF
-        run: docker run --rm -t -v `pwd`:/slides -v ~:/home/user astefanutti/decktape talks/java-n/index.html slides/gpiwowarek-java-n.pdf
+        run: docker run --rm -t -v `pwd`:/slides -v ~:/home/user astefanutti/decktape talks/${{ matrix.talk }}/index.html slides/gpiwowarek-${{ matrix.talk }}.pdf
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
