--- a/.github/workflows/build-tdd.yml
+++ b/.github/workflows/build-tdd.yml
@@ -7,6 +7,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        talk: [ 'tdd' ]
 
     name: Generate PDF
     steps:
@@ -16,7 +19,7 @@ jobs:
         run: mkdir slides && sudo chmod 777 slides
 
       - name: Build PDF
-        run: docker run --rm -t -v `pwd`:/slides -v ~:/home/user astefanutti/decktape talks/tdd/index.html slides/gpiwowarek-tdd-what-they-did-not-tell-you.pdf
+        run: docker run --rm -t -v `pwd`:/slides -v ~:/home/user astefanutti/decktape talks/${{ matrix.talk }}/index.html slides/gpiwowarek-${{ matrix.talk }}.pdf
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
