--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Grzegorz Piwowarek
-description: 'Software Engineer'
+description: 'Java Champion'
 url: 'http://4comprehension.com'
 baseurl: '/'
 google_analytics: 'UA-109711864-1'
