--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,7 @@ author:
   github_username: pivovarit
   linkedin_username:  gpiwowarek
   stack-overflow-id: 2229438
+  bluesky_url: https://bsky.app/profile/pivovarit.bsky.social
 
 defaults:
   -
